# homomorphic-wisards

./: .gitignore  LICENSE-Apache  LICENSE-MIT  README.md
data/ham10000/: ham10000-rgb-test.csv.xz
data/mnist/: mnist-test.csv.xz
data/wisconsin/: wisconsin-test.csv.xz  wisconsin-train.csv.xz
mosfhet/: Cargo.toml  README.md
mosfhet/benches/: trlwe_trgsw_mul.rs
mosfhet/examples/: blind-rotation-variance.rs  cdemux-tree-parallel.rs  cdemux-tree.rs  cmux-tree-variance.rs  cmux-tree.rs  deep-cswap-variance.rs  deep-cswap.rs  lut-sum-variance.rs  lut-sum.rs
mosfhet/mosfhet-sys/: Cargo.toml  build.rs
mosfhet/mosfhet-sys/MOSFHET/include/: mosfhet.h
mosfhet/mosfhet-sys/MOSFHET/src/: misc.c  polynomial.c  tlwe.c
mosfhet/mosfhet-sys/src/: bindings.rs  lib.rs
mosfhet/src/: lib.rs
mosfhet/src/common/: macros.rs  mod.rs  torus.rs
mosfhet/src/poly/: binary.rs  dft.rs  mod.rs  torus.rs
mosfhet/src/tlwe/: key.rs  mod.rs  sample.rs
mosfhet/src/trgsw/: dft.rs  key.rs  sample.rs
mosfhet/src/trlwe/: dft.rs  key.rs  mod.rs  sample.rs
scripts/: run-ham10000-rgb-large.sh  run-ham10000-rgb-medium.sh  run-ham10000-rgb-small.sh  run-mnist-large.sh  run-mnist-medium.sh  run-mnist-small.sh  run-mnist-tiny.sh  run-wisconsin-small.sh
wisard-he/: Cargo.toml
wisard-he/.cargo/: config.toml
wisard-he/src/: main.rs  util.rs
wisard-pt/: Cargo.toml
wisard-pt/src/: main.rs
